# mlx-node

./: .gitignore  .gitmodules  .oxfmtrc.json  .yarnrc.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  oxfmtrc.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: renovate.json
__test__/: test-model-utils.ts  test-utils.ts  tsconfig.json
crates/mlx-core/: Cargo.toml
crates/mlx-core/src/: autograd.rs  convert.rs  dataset.rs  lib.rs  param_manager.rs  sampling.rs  stream.rs  tensor.rs  tokenizer.rs  tracing.rs
crates/mlx-core/src/array/: attention.rs  handle.rs  mask.rs  mod.rs  padding.rs
crates/mlx-core/src/gradients/: activation_gradients.rs  loss_gradients.rs  mod.rs  nn_gradients.rs
crates/mlx-core/src/grpo/: advantages.rs  autograd.rs  callbacks.rs  engine.rs  entropy.rs  loss.rs  mod.rs  rewards.rs
crates/mlx-core/src/models/: mod.rs
crates/mlx-core/src/models/qwen3/: config.rs  generation.rs  mod.rs  model.rs  persistence.rs
crates/mlx-core/src/nn/: activations.rs  embedding.rs  linear.rs  losses.rs  mod.rs  normalization.rs  rope.rs
crates/mlx-core/src/optimizers/: adam.rs  adamw.rs  mod.rs  rmsprop.rs  sgd.rs
crates/mlx-core/src/output_store/: mod.rs  reader.rs  schema.rs  store.rs  types.rs  writer.rs
crates/mlx-core/src/sft/: autograd.rs  engine.rs  loss.rs  mod.rs
crates/mlx-core/src/tools/: mod.rs
crates/mlx-core/src/transformer/: attention.rs  batch_kv_cache.rs  block.rs  fused_attention.rs  kv_cache.rs  mlp.rs  mod.rs  paged_attention.rs  rotating_kv_cache.rs
crates/mlx-core/src/utils/: batch_generation.rs  functional.rs  mod.rs  safetensors.rs
crates/mlx-tui/: Cargo.toml
crates/mlx-tui/src/: app.rs  commands.rs  main.rs  messages.rs
crates/mlx-tui/src/ui/: config.rs  confirm_quit.rs  header.rs  help.rs  logs.rs  metrics.rs  mod.rs  progress.rs  sample_detail.rs  samples.rs  settings.rs
data/: .gitignore
docs/: AUTOGRAD_INTEGRATION.md  DEVELOPMENT_HISTORY.md  FEATURE_ALIGNMENT_SESSION.md  PERFORMANCE_FIX.md  PERFORMANCE_INVESTIGATION.md  README.md  (+4 more)
(+97 files in other folders)
