[package]
name = "mlx-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { workspace = true }
half = { workspace = true }
mlx-sys = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dependencies.mimalloc-safe]
workspace = true
features = ["skip_collect_on_exit", "v3"]

[build-dependencies]
napi-build = { workspace = true }
