[package]
name = "mlx-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mlx-train"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full", "process", "io-util"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
color-eyre = "0.6"
